--- a/index.html
+++ b/index.html
@@ -352,8 +352,8 @@
 				<div class="row">
 					<div class="col-md-4">
 						<div class="team-box text-center to-animate-2">
-							<div class="user"><img class="img-reponsive" src="images/user-1.jpg" alt="Roger Garfield"></div>
-							<h3>Roger Garfield</h3>
+							<div class="user"><img class="img-reponsive" src="images/user-1.jpg" alt="Менцінський Данило"></div>
+							<h3>Менцінський Данило</h3>
 							<span class="position">Co-Founder, Lead Developer</span>
 							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 							<ul class="social-media">
